Archive2/d6/86eb1c15df6740/output
main.cpp: In function 'int main()':
main.cpp:1:15: error: expected primary-expression before '<' token
 #define X(M) M<0
               ^
main.cpp:4:6: note: in expansion of macro 'X'
    1 X(<);
      ^
