Archive2/d6/86eb1c15df6740/main.cpp
#define X(M) M<0

int main() {
   1 X(<);
}